Updated api-gateway. Moved from mvc to react